fix(styling): make sure the toolbar is always sticky visible
Making the editor fit the content makes it always large enough

--- a/src/jinn-tap.css
+++ b/src/jinn-tap.css
@@ -7,7 +7,7 @@ jinn-tap {
         "editor aside";
     column-gap: 1rem;
     row-gap: .5rem;
-    /* height: 100%; */
+    height: fit-content;
 }
 
 jinn-tap > nav {
